# AVBook

./: .gitignore  Readme.md
.github/workflows/: pages.yml
Chapter3/: Readme.md
Chapter3/ros2_ws/src/avbook_cpp_nodes/: CMakeLists.txt  package.xml
Chapter3/ros2_ws/src/avbook_cpp_nodes/src/: sensor_fusion_node.cpp  sobel_filter_node.cpp  voxel_grid_filter_node.cpp
Chapter3/ros2_ws/src/avbook_py_nodes/: package.xml  setup.cfg  setup.py
Chapter3/ros2_ws/src/avbook_py_nodes/avbook_py_nodes/: sensor_fusion_node.py  sobel_filter_node.py  voxel_grid_filter_node.py
Chapter5/: Readme.md
Chapter5/ros2_ws/src/avbook_perception_py/: package.xml  setup.cfg  setup.py
Chapter5/ros2_ws/src/avbook_perception_py/avbook_perception_py/: deepsort_tracker_node.py  faster_rcnn_node.py  lanenet_lane_node.py  vision_msgs_utils.py  yolo_perception_node.py
Chapter5/ros2_ws/src/avbook_perception_py/launch/: deepsort.launch.py  faster_rcnn.launch.py  lanenet.launch.py  perception_pipeline.launch.py  yolo.launch.py
Chapter6/: Readme.md
Chapter6/ros2_ws/src/avbook_localization_py/: package.xml  setup.cfg  setup.py
Chapter6/ros2_ws/src/avbook_localization_py/avbook_localization_py/: geometry_utils.py  lidar_icp_localizer_node.py  lidar_ndt_localizer_node.py  open3d_utils.py  orb_visual_localizer_node.py  pointcloud2_numpy.py
Chapter6/ros2_ws/src/avbook_localization_py/launch/: lidar_icp.launch.py  lidar_ndt.launch.py  orb_visual_localization.launch.py
Chapter7/: Readme.md
Chapter7/ros2_ws/src/avbook_planning_py/: package.xml  setup.cfg  setup.py
Chapter7/ros2_ws/src/avbook_planning_py/avbook_planning_py/: astar_core.py  astar_planner_node.py
Chapter7/ros2_ws/src/avbook_planning_py/launch/: astar.launch.py
Chapter8/: Readme.md
Chapter8/ros2_ws/src/avbook_control_py/: package.xml  setup.cfg  setup.py
Chapter8/ros2_ws/src/avbook_control_py/avbook_control_py/: control_visualizer_node.py  mpc_controller_node.py  pid_controller_node.py  plant_1d_node.py  setpoint_node.py  topics.py
Chapter8/ros2_ws/src/avbook_control_py/launch/: mpc_demo.launch.py  pid_demo.launch.py
LecturePresentations/: Lecture 8.pptx
Projects/Project1/: Project 1_ Sensor Fusion Range Estimation.odt
Projects/Project1/sample_answer/: package.xml  setup.cfg  setup.py
Projects/Project1/sample_answer/auto_perception/: config.py  detection.py  geodesy.py  intrinsics.py  pointcloud_io.py  projection.py  yolo_lidar_fusion_node.py
Projects/Project1/sample_answer/launch/: yolo_lidar_fusion.launch.py
Projects/Project2/: Project 2 - Mapping Indoor and Outdoor Environments.odt
Projects/Project2/sample_answer/: 2D_map_3rd_floor_low_range.pgm  lanelet2_map.osm  my_slam_map.pgm  test_1_op_1.osm
Projects/Project3/: Project 3_ Indoor Navigation - Food Delivery.odt
Projects/Project3/sample_answers/: ackerman_controller.py  nav.yaml
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/real/: ATTRIBUTION.md  MANIFEST.json  cassi-disengagements.json  comma2k19-segment.json  nhtsa-ads-reports.json  road-can-attacks.json  tampa-bsm.json
web/scripts/: prepare_real_data.py  validate_real_data.mjs
web/src/: App.tsx  main.tsx  styles.css  types.ts
web/src/components/: AppHeader.tsx  Icons.tsx
web/src/components/demos/: DemoRenderer.tsx  RealDataLabs.tsx
web/src/data/: chapters.test.ts  chapters.ts  questions.test.ts  questions.ts  quizBank.test.ts  quizBank.ts  quizCases1.ts  quizCases10.ts  quizCases11.ts  quizCases12.ts  quizCases13.ts  quizCases14.ts  quizCases2.ts  quizCases3.ts  quizCases4.ts  quizCases5.ts  quizCases6.ts  quizCases7.ts  quizCases8.ts  quizCases9.ts  quizConcepts1.ts  quizConcepts2.ts  quizQuality.test.ts
web/src/demos/: realData.test.ts  realData.ts
web/src/lib/: progress.ts
web/src/pages/: ChapterPage.tsx  HomePage.tsx  QuizPage.tsx
