<package format="3">
  <name>auto_perception</name>
  <version>0.2.0</version>
  <description>YOLO + LiDAR fusion with GPS output</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

