<?xml version="1.0"?>
<package format="3">
  <name>avbook_py_nodes</name>
  <version>0.0.1</version>
  <description>AVBook Chapter 3 ROS 2 Python examples: sensor fusion, voxel grid, sobel.</description>
  <maintainer email="you@example.com">AVBook</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
