<?xml version="1.0"?>
<package format="3">
  <name>avbook_perception_py</name>
  <version>0.0.1</version>
  <description>AVBook Chapter 5 ROS 2 perception examples: YOLO, Faster R-CNN, LaneNet-style lane detection, DeepSORT tracking.</description>
  <maintainer email="you@example.com">AVBook</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
